<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/ctxmid_delete"
        android:title="@string/delete"/>
    <item
        android:id="@+id/ctxmid_rename"
        android:title="@string/rename"/>
    <item
        android:id="@+id/ctxmid_copy"
        android:title="@string/copy"/>
    <item
        android:id="@+id/ctxmid_cut"
        android:title="@string/cut"/>
    <item
        android:id="@+id/ctxmid_move"
        android:title="@string/move"/>
    <item
        android:id="@+id/ctxmid_paste"
        android:title="@string/paste"/>
    <item
        android:id="@+id/ctxmid_new_folder"
        android:title="@string/new_dir"/>
    <item
        android:id="@+id/ctxmid_share"
        android:title="@string/share"/>

</menu>